syntax = "proto3";

option go_package="./pb";

message CardRequest {
  string card_number = 1;
  string expiration_month = 2;
  string expiration_year = 3;
}

message ValidationResponse {
  bool valid = 1;
  repeated ValidationError errors = 2;
}

message ValidationError {
  int32 code = 3;
  string message = 4;
}

service Validation {
  rpc ValidateCard(CardRequest) returns (ValidationResponse) {}
}